# warehouse-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TZ.md  docker-compose.yml  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2024_09_26_1244-150234be8314_create_products_model.py  2024_09_27_1445-0c2dac87a870_create_order_and_order_items_models.py  2024_09_28_2119-f4426fa6640c_added_items_column_for_order.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  orders.py  products.py
src/core/: config.py
src/core/models/: __init__.py  base.py  order_items.py  orders.py  products.py
src/core/schemas/: __init__.py  orders.py  products.py
src/crud/: orders.py  products.py
src/db/: session.py
src/tests/: conftest.py
src/tests/api/: test_orders.py  test_products.py
src/tests/crud/: test_orders.py  test_products.py
src/tests/utils/: test_check_product_availability.py
src/utils/: products.py
